header fixes for spacing, edit profile improvements

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -280,12 +280,20 @@ body,
   }
 
   /*Profile edit*/
+  .edit-profile-container {
+    display: block; 
+    width: 100%;
+    max-width: 100vw;
+    overflow-x: hidden;
+    padding: 0 1rem;
+  }
   .edit-profile {
     background-color: #686868;
     color: #ffff;
     font-weight: 200;
-    width: 20rem;
-    margin: 0rem 0rem 5rem 2rem;
+    width: 100%;
+    max-width: 100% !important;
+    margin-left: 1rem !important;
     padding: 1rem 1rem 4rem 1rem;
   }
   .edit-profile-header {
